[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Fonts/Roboto-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/nothing.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Import.gd" type="Script" id=3]
[ext_resource path="res://Assets/icons/angle-left-solid.png" type="Texture" id=4]
[ext_resource path="res://Assets/file_dialog.tres" type="Theme" id=5]

[sub_resource type="DynamicFont" id=8]
size = 150
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1000, -167 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Foreground:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_left_end"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1000, -167 ), Vector2( -3000, -167 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Foreground:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "fade_left_start"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1000, -167 ), Vector2( -1000, -167 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Foreground:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "fade_right_end"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1000, -167 ), Vector2( 1000, -167 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Foreground:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
resource_name = "fade_right_start"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -3000, -167 ), Vector2( -1000, -167 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Foreground:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Import" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -1511, -113 )
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -1999.0
margin_top = -1163.0
margin_right = 4232.0
margin_bottom = 2857.0
color = Color( 0.858824, 0.788235, 0.396078, 1 )

[node name="Name" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -281.5
margin_top = 150.0
margin_right = 281.5
margin_bottom = 327.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "Tasks"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -225.0
margin_top = -199.0
margin_right = 225.0
margin_bottom = 466.0
rect_pivot_offset = Vector2( -944, -526 )
alignment = 1

[node name="Truth" type="Label" parent="VBoxContainer"]
margin_top = 222.0
margin_right = 450.0
margin_bottom = 293.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "Import Truth"
align = 1
valign = 1

[node name="TruthButton" type="TouchScreenButton" parent="VBoxContainer/Truth"]
scale = Vector2( 4.91667, 1.125 )
normal = ExtResource( 2 )

[node name="Dare" type="Label" parent="VBoxContainer"]
margin_top = 297.0
margin_right = 450.0
margin_bottom = 368.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "Import Dare"
align = 1
valign = 1

[node name="DareButton" type="TouchScreenButton" parent="VBoxContainer/Dare"]
scale = Vector2( 4.91667, 1.125 )
normal = ExtResource( 2 )

[node name="Update" type="Label" parent="VBoxContainer"]
margin_top = 372.0
margin_right = 450.0
margin_bottom = 443.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "Update"
align = 1
valign = 1

[node name="UpdateButton" type="TouchScreenButton" parent="VBoxContainer/Update"]
scale = Vector2( 4.91667, 1.125 )
normal = ExtResource( 2 )

[node name="FileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -271.0
margin_top = -200.0
margin_right = 271.0
margin_bottom = 509.0
theme = ExtResource( 5 )
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.json; JSON" )
show_hidden_files = true

[node name="Back" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Icons8-back-96" type="Sprite" parent="Back"]
position = Vector2( 52, 69 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 4 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="Back"]
scale = Vector2( 1.61458, 1.95313 )
normal = ExtResource( 2 )

[node name="transition" type="CanvasLayer" parent="."]

[node name="Foreground" type="ColorRect" parent="transition"]
margin_left = -220.0
margin_top = -167.0
margin_right = 899.0
margin_bottom = 1335.0
color = Color( 0, 0, 0, 1 )

[node name="ColorRect" type="ColorRect" parent="transition"]
margin_left = 1000.0
margin_top = -167.0
margin_right = 3500.0
margin_bottom = 1833.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="transition"]
anims/RESET = SubResource( 1 )
anims/fade_left_end = SubResource( 2 )
anims/fade_left_start = SubResource( 3 )
anims/fade_right_end = SubResource( 4 )
anims/fade_right_start = SubResource( 5 )

[connection signal="pressed" from="VBoxContainer/Truth/TruthButton" to="." method="_on_TruthButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Dare/DareButton" to="." method="_on_DareButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Update/UpdateButton" to="." method="_on_UpdateButton_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="pressed" from="Back/TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
